--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,127 @@
 .top {
-
+    background-color: #1F2937;
+    display: flex;
+    flex-direction: column;
 }
 
 .header {
-    background-color: blue;
-    height: auto;
     border: solid black;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 100px;
+    margin-right: 100px;
+}
 
+.header-logo {
+    color: #F9FAF8;
+    font-size: 24px;
 }
 
 .header-links-container {
-
+    display:flex;
+    gap: 10px;
+    justify-content: end;
+    color: #e5e7eb;
+    font-size: 18px;
 }
 
 .header-one-title {
     font-size: 48px;
     font-weight: bolder;
-    color: #f9faf8
+    color: #F9FAF8;
+}
+
+.header-image {
+    align-self: flex-end;
+    border: solid black;
+    width: 400px;
+    color: #e5e7eb;
+    background-color: rgb(110, 110, 110);
+}
+
+.sign-up-section-container {
+    border: solid black;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.header-text {
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
+.sign-up-button-top {
+    background-color: #3882F6;
+    border: solid black;
+    padding: 3px;
+    flex-shrink: 0;
+    width: 50px;
+    color: #e5e7eb;
+}
+
+.middle-one {
+
+}
+
+.middle-two {
+    display: flex;
+    justify-content: center;
+    background: #E5E7EB;
+}
+
+.quote-text {
+    display: flex;
+    justify-content: start;
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+}
+
+.quote-author {
+    display: flex;
+    justify-content: end;
+    border: solid black;
+    font-weight: bolder;
+}
+
+.quote-text, .quote-author {
+    margin-left: 150px;
+    margin-right: 150px;
+    max-width: 600px;
+}
+
+.bottom {
+    background-color: #3882F6;
+}
+
+.call-to-action-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: solid black;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.call-to-action-text-container {
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.call-to-action-header {
+    border: solid black;
+}
+
+.call-to-action-text {
+    border: solid black;
+}
+
+.sign-up-button-bottom {
+    background-color: #3882F6;
+    border: solid black;
+    margin-left: 50px;
+    margin-right: 50px;
+    padding: 3px;
+    flex-shrink: 0;
+    color: #e5e7eb;
 }
