--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,10 @@
 }
 
 .header {
-    border: solid black;
     display: flex;
     justify-content: space-between;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .header-logo {
@@ -26,12 +25,12 @@
 }
 
 .sign-up-section-container {
-    border: solid black;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 10%;
+    margin-right: 10%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    gap: 5%
 }
 
 .header-text-container {
@@ -39,9 +38,8 @@
 
 .header-image {
     
-    border: solid black;
     width: 300px;
-    height: 100px;
+    height: 150px;
     color: #e5e7eb;
     background-color: rgb(110, 110, 110);
     margin-left: .5%;
@@ -71,31 +69,64 @@
 
 .sign-up-button-top {
     background-color: #3882F6;
-    border: solid black;
     padding: 3px;
     flex-shrink: 0;
     width: 50px;
     color: #e5e7eb;
     margin: 5%;
-    margin-top: 0;
-    margin-bottom: 0;
+    margin-top: 1%;
+    margin-bottom: 1%;
     margin-left: 0;
+    border-radius: 5px;;
 }
 
 .middle-one {
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .header-two-title {
-
+    margin-left: 150px;
+    margin-right: 150px;
+    max-width: 600px;
+    font-size: 36px;
+    font-weight:bolder;
+    color: #1F2937;
 }
 
 .cards-container {
-
+    margin-left: 150px;
+    margin-right: 150px;
+    max-width: 600px;
 }
 
 .card-text-container {
 
+}
+
+.card-images {
+    border: 5px solid #3882F6;
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+}
+
+.card-images-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.card-text {
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-size: 18px;
+    color: black
 }
 
 .middle-two {
@@ -118,7 +149,6 @@
 .quote-author {
     display: flex;
     justify-content: end;
-    border: solid black;
     font-weight: bolder;
     padding: 10%;
     padding-top: 0;
@@ -139,7 +169,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: solid black;
     background-color: #3882F6;
     margin-top: 50px;
     margin-bottom: 50px;
@@ -148,32 +177,29 @@
 }
 
 .call-to-action-text-container {
-    padding: 3%;
+    padding: 5%;
 }
 
 .call-to-action-header {
-    border: solid black;
-    margin-left: 100px;
-    margin-right: 100px;
     color: #F9FAF8;
     font-size: 24px;
 }
 
 .call-to-action-text {
-    border: solid black;
-    margin-left: 100px;
-    margin-right: 100px;
     color: #E5E7EB;
 }
 
 .sign-up-button-bottom {
     background-color: #3882F6;
-    border: solid black;
     padding: 3px;
     flex-shrink: 0;
     color: #e5e7eb;
     margin-left: 100px;
     margin-right: 100px;
+    border: 1px solid #e5e7eb;
+    border-radius: 5px;
+    font-size: 18px;
+    font-weight: bolder;
 }
 
 .copyright {
