--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,19 @@
+.container {
+    min-width: 1000px;
+}
+
 .top {
-    background-color: #1F2937;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    background-color: #1F2937;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
-    margin-left: 10%;
-    margin-right: 10%;
+    align-items: center;
+    min-width: 800px;
 }
 
 .header-logo {
@@ -31,9 +36,6 @@
     justify-content: center;
     align-items: center;
     gap: 5%
-}
-
-.header-text-container {
 }
 
 .header-image {
@@ -142,7 +144,7 @@
     font-size: 36px;
     font-weight: lighter;
     font-style: italic;
-    padding: 10%;
+    padding-top: 10%;
     padding-bottom: 0;
 }
 
@@ -162,18 +164,19 @@
 }
 
 .bottom {
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .call-to-action-box {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     background-color: #3882F6;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    margin-left: 200px;
-    margin-right: 200px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+
 }
 
 .call-to-action-text-container {
